--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -1,27 +1,31 @@
 .item {
   width: 250px;
-  height:350px;
+  height: 350px;
   border: 1px solid rgb(32, 31, 106);
   border-radius: 15px;
 
   .img {
-    width:100%;
-    height:200px;
+    width: 100%;
+    height: 200px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 
   .content {
-    height:150px;
+    height: 150px;
     padding: 5px;
     text-align: center;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     .title {
       margin-bottom: 10px;
-      font-size:18px;
+      font-size: 18px;
     }
   }
+}
+
+.description {
+  
 }
