--- a/src/global.scss
+++ b/src/global.scss
@@ -87,9 +87,8 @@ video {
   vertical-align: baseline;
   box-sizing: border-box;
   text-decoration: none;
-  color: inherit
+  color: inherit;
 }
-
 
 article,
 aside,
@@ -102,25 +101,25 @@ hgroup,
 menu,
 nav,
 section {
-  display: block
+  display: block;
 }
 
 html {
-  height: 100%
+  height: 100%;
 }
 
 body {
-  line-height: 1
+  line-height: 1;
 }
 
 ol,
 ul {
-  list-style: none
+  list-style: none;
 }
 
 blockquote,
 q {
-  quotes: none
+  quotes: none;
 }
 
 blockquote:before,
@@ -128,12 +127,12 @@ blockquote:after,
 q:before,
 q:after {
   content: '';
-  content: none
+  content: none;
 }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0
+  border-spacing: 0;
 }
 
 body {
