--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     .title {
       margin-bottom: 10px;
       font-size: 18px;
@@ -27,5 +28,8 @@
 }
 
 .description {
-  
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
