--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,12 +6,14 @@
   max-width: 1240px;
   margin: 0 auto;
   padding: 20px 5px;
-
   .list {
     display: flex;
     gap: 20px;
   }
-
+  .url {
+    text-align: center;
+    padding: 5px;
+  }
   .item {
     > a {
       transition: all 0.3s;
