--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -7,12 +7,17 @@
       padding: 30px;
       border-radius: 15px;
       box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+      display: flex;
+      flex-direction: column;
+      gap:20px;
     }
 
     form>* {
       display: block;
-
     }
+  }
 
 
+  .error {
+    color: red;
   }
