--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,10 +1,14 @@
 .search {
-  position: relative;
+
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 30px;
   text-align: center;
+
+  .container {
+    position: relative;
+  }
 
   .input {
     display: block;
@@ -18,7 +22,7 @@
   .icon {
     position: absolute;
     top: 5px;
-    left: 42%;
+    left: 5%;
     width: 20px;
     height: 20px;
     transition: all 0.3s;
